<resources>
    <string name="app_name">MonitoraMovil</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Iniciar Sesión o Registrarme</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombres">Nombres</string>
    <string name="edad">30</string>
    <string name="identificacion">Identificación</string>
    <string name="descripccion">Descripcción</string>
    <string name="paciente_exito">Paciente Creado</string>
    <string name="paciente_no_exito">Error, intenta mas tarde</string>
    <string name="paciente_rom">paciente_ser</string>
    <string name="title_activity_vista_paciente">VistaPaciente</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_perfil_paciente">PerfilPaciente</string>
    <string name="actualizando_paciente">Actualizando Paciente</string>
    <string name="actualizo">Actualizo Paciente</string>
    <string name="no_actualizo">No actualizo paciente</string>
    <string name="puede_actualizar">Puede actualizar los datos del paciente</string>
    <string name="error_fatal">Error</string>
    <string name="No_bluetooth">No reconoce Bluetooth</string>
    <string name="name_device">My Oximeter</string>
    <string name="activando_bluetooth">Activando Bluetooth</string>
    <string name="bluetooth_activado">Bluetooth Activado</string>
    <string name="bluetooth_activado_no">No ha sido activado</string>
    <string name="bluetooth_activando">Activando bluetooth</string>
    <string name="address">mac</string>
    <string name="servicio_oximetero">cdeacb80-5235-4c07-8846-93a37ee6b86d</string>
    <string name="caracteristica_oximetro">cdeacb81-5235-4c07-8846-93a37ee6b86d</string>
    <string name="oxi_previa">Oxiprevia</string>
    <string name="exito">Registro guardado</string>
    <string name="guardar_registros">Registro de datos</string>
    <string name="anotaciones">Sus anotaciones aquí</string>
    <string name="registro_exito">Registro Guardado</string>
    <string name="no_registro">No es posible realizar el registro</string>
    <string name="fechaPulso">Fecha</string>
    <string name="puslo">Pulso</string>
    <string name="SPO2">Spo2</string>
    <string name="PI">PI</string>
    <string name="Gluco">100 mg/dl</string>
    <string name="Bascula">85KG</string>
    <string name="Tensiometro">120/80</string>
    <string name="no_hay_registros">No hay registros</string>
    <string name="registrar_muestra">Registrar Muestra</string>
    <string name="no_anotaciones">Ninguna Anotación</string>
    <string name="registro_paciente">Registrar Paciente</string>
    <string name="title_activity_registros">ActivityRegistros</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pulso">Pulso</string>
    <string name="oximetria">Oximetrias</string>
    <string name="registros">Registros</string>
    <string name="oxi_text">Oximetría</string>
    <string name="Tensión" />
    <string name="tens">Tensión</string>
    <string name="gluco">Azucar</string>
    <string name="gluco_text">Glucometría</string>
    <string name="peso">Peso</string>
    <string name="cargando">Cargando...</string>
    <string name="sesion">Sesión</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="cargando_datos">Cargando Datos..</string>
    <string name="buscando_oxi">Buscando Oximetro</string>
    <string name="buscar_paciente">Buscar Paciente</string>
    <string name="buscar">Buscar...</string>
    <string name="no_resultados">No hay coincidencias</string>
</resources>
