<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Space
            android:layout_width="5dp"
            android:layout_height="10dp"/>
        <TextView
            android:text="@string/fechaPulso"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtFechaTomaPulso"
            android:textColor="@color/TitleLetras"
            android:fontFamily="sans-serif"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textViewIdItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/TitleLetras"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewIsEmergencia"
            android:layout_width="68dp"
            android:layout_height="68dp"
            app:srcCompat="@drawable/report" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/TitleSubTitle"
                    android:layout_weight="1"
                    android:text="@string/puslo"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textViewPulsoItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPulso"
                    android:textColor="@color/white_opaque"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/SPO2"
                    android:textColor="@color/TitleSubTitle"
                    android:textAlignment="textStart"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textViewSPO2Item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_opaque"
                    android:background="@color/coloSPO2"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PI"
                    android:textColor="@color/TitleSubTitle"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic"
                    android:textAllCaps="false"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/textViewPIItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white_opaque"
                    android:background="@color/PI"

                    android:text="TextView" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>