<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="5dp"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/txtFechaTomaPulsoDialog"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/fechaPulso"
            android:textColor="@color/TitleLetras"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textViewIdItemRegistroDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/TitleLetras"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewIsEmergencia"
            android:layout_width="68dp"
            android:layout_height="68dp"
            app:srcCompat="@drawable/report" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/puslo"
                    android:textColor="@color/TitleSubTitle"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textViewPulsoItemDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPulso"
                    android:text="TextView"
                    android:textColor="@color/white_opaque" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/SPO2"
                    android:textAlignment="textStart"
                    android:textColor="@color/TitleSubTitle"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textViewSPO2ItemDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/coloSPO2"
                    android:text="TextView"
                    android:textColor="@color/white_opaque" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/PI"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/TitleSubTitle"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textViewPIItemDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/PI"
                    android:text="TextView"

                    android:textColor="@color/white_opaque" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextPacienteAnotaciones"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minLines="8"
        android:scrollbars="vertical"
        android:text="Name" />

</LinearLayout>