<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerVistaPaciente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_opaque"
    tools:context="ponny.org.democampains.vistas.VistaPaciente">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"

        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageView2"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:background="@color/white_opaque"
        android:src="@drawable/profile65"
        app:civ_border_color="#0091EA"
        app:civ_border_width="3dp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewGlucometro"
        style="@style/imageDevices"

        android:layout_marginBottom="24dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="196dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toStartOf="@+id/imageViewBascula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/glucometria" />

    <ImageView
        android:id="@+id/imageViewPulso"
        style="@style/imageDevices"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewGlucometro"
        app:layout_constraintEnd_toStartOf="@+id/imageViewTensiometro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/oximetria" />

    <ImageView
        android:id="@+id/imageViewTensiometro"
        style="@style/imageDevices"
        android:layout_height="138dp"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewBascula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewPulso"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescripccionPaciente"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tensiometro" />

    <ImageView
        android:id="@+id/imageViewBascula"
        style="@style/imageDevices"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewGlucometro"
        app:layout_constraintTop_toBottomOf="@+id/textViewOximetriaLista4"
        app:srcCompat="@drawable/peso" />

    <TextView
        android:id="@+id/TextNombresPaciente"
        style="@style/editTextPaciente"
        android:layout_width="351dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <TextView
        android:id="@+id/textViewDescripccionPaciente"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:lines="8"
        android:scrollbars="vertical"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPulso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextNombresPaciente"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/imageViewSave"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="34dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewBascula"
        app:layout_constraintEnd_toStartOf="@+id/imageViewTensiometro"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toEndOf="@+id/imageViewGlucometro"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTensiometro"
        app:layout_constraintVertical_bias="0.474"
        style="@style/floatingButtons"
        app:srcCompat="@drawable/save" />

    <TextView
        android:id="@+id/textViewOximetriaLista"

        style="@style/editTextRegistroOximetria"
        android:layout_width="135dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="prueba"
        android:textColor="#f7f4f5"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPulso"
        app:layout_constraintEnd_toStartOf="@+id/imageViewSave"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewPulso"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewOximetriaLista2"

        style="@style/editTextRegistroOximetria"
        android:layout_width="113dp"
        android:layout_height="36dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/Gluco"
        android:textAlignment="center"
        android:textColor="#f7f4f5"
        app:layout_constraintEnd_toStartOf="@+id/imageViewBascula"
        app:layout_constraintTop_toBottomOf="@+id/textViewOximetriaLista" />

    <TextView
        android:id="@+id/textViewOximetriaLista3"

        style="@style/editTextRegistroOximetria"
        android:layout_width="135dp"
        android:layout_height="41dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/Bascula"
        android:textColor="#f7f4f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/imageViewGlucometro"
        app:layout_constraintTop_toTopOf="@+id/imageViewBascula" />

    <TextView
        android:id="@+id/textViewOximetriaLista4"

        style="@style/editTextRegistroOximetria"
        android:layout_width="135dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/Tensiometro"
        android:textColor="#f7f4f5"
        app:layout_constraintBottom_toTopOf="@+id/imageViewBascula"
        app:layout_constraintEnd_toEndOf="@+id/imageViewTensiometro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewTensiometro"
        app:layout_constraintTop_toTopOf="@+id/imageViewTensiometro"
        app:layout_constraintVertical_bias="0.157" />

</android.support.constraint.ConstraintLayout>
